Use faker and luxon

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,7 +1,9 @@
-{{page-title "EmberCliBabelPackageImports"}}
+{{page-title "ember-cli-babel Package Imports"}}
 
-{{!-- The following component displays Ember's default welcome message. --}}
-<WelcomePage />
-{{!-- Feel free to remove this! --}}
+<p>
+  Faker: {{this.fakerData}}
+</p>
 
-{{outlet}}
+<p>
+  Luxon: {{this.luxonFormattedDate}}
+</p>
